# llmc

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Genesis.md  Mission.md  Plan.md  README.md  SPEC.md
.github/workflows/: ci.yml  release.yml
docs/: v5-roadmap.md  versioning.md
src/: lib.rs  lint.rs
src/cli/: lint.rs  mod.rs  run.rs  transpile.rs
src/transpile/: anthropic_messages.rs  mod.rs  openai_chat.rs
tests/: lint.rs  native_json.rs
